welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:12: error: type mismatch;
 found   : Unit
 required: Boolean
while(n=4){
       ^