welcome.lessons.welcome.variables.RunFour.scala.code
var n=0;
var m=0;
while(n!=4){
	avance();
	m=m+1;
	if(estSurBiscuit()){
		prendBiscuit();
		n=n+1;
	}
}
while(n=4){
	recule();
}
